--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.4",
+    "@draft-js-plugins/image": "^4.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@thewirv/react-barcode-scanner": "^3.2.3",
+    "draft-js": "^0.11.7",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-webcam-barcode-scanner": "^0.0.2-rc2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
